[gd_scene load_steps=4 format=3 uid="uid://cnjgxekb2mmyq"]

[ext_resource type="Script" uid="uid://4kh42kgoojvu" path="res://scenes/ui/buildings/building_ui.gd" id="1_knqie"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o6pyt"]
load_path = "res://.godot/imported/farm.png-e62703ed1667b07b74ed84065e4ebec5.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_0nadc"]
atlas = SubResource("CompressedTexture2D_o6pyt")

[node name="BuildingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1339.0
offset_bottom = -739.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knqie")

[node name="Container" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_right = 63.0
offset_bottom = 62.0
scale = Vector2(1.00413, 1)
mouse_filter = 2

[node name="BuildingButton" type="TextureButton" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
texture_normal = SubResource("AtlasTexture_0nadc")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Container/BuildingButton" to="." method="_on_ruins_button_pressed"]
